@@ -1,2 +1,3 @@
 cd love-service-impl
-nohup java -jar love-service.jar --server.port=18903 &
+### nohup java -jar love-service.jar --server.port=18903 &
+nohup java -jar -Xms256m -Xmx256m -Xmn128m -XX:SurvivorRatio=6 -XX:MaxMetaspaceSize=64m -XX:MetaspaceSize=128m -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -XX:ConcGCThreads=2 -XX:+HeapDumpBeforeFullGC -XX:+HeapDumpAfterFullGC -XX:HeapDumpPath=/data/log/love-service/heapdump.hprof -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+DisableExplicitGC -Xloggc:/data/log/love-service/gc/love-service-gc.log -XX:+HeapDumpOnOutOfMemoryError -Dapp.name=love-service -Dapp.group=test -Dserver.tomcat.accesslog.directory=/home/admin/love-service/logs -XX:CMSInitiatingOccupancyFraction=70 love-service.jar --server.port=18903 &
